--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 				Semicolons as line-enders are avoided unless absolutely necessary. 
 				(They’re just visual clutter otherwise; <a href="https://en.wikipedia.org/wiki/Typography" target="_blank">typographic</a> noise in the signal.)
 				Q is meant to be flexible and expressive to adapt to your style.
-				<a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">Function chaining</a> is prized, but Q often uses static class methods as a foundation for instance methods, so you’re free to use either approach.
+				<a href="https://en.wikipedia.org/wiki/Fluent_interface" target="_blank">“Fluent interface” method chaining</a> is prized, but Q often uses static class methods as a foundation for instance methods, so you’re free to use either approach.
 				Some ES6 syntax is preferred, but the bits that disfigure JavaScript to look more like Java are weeded out, bagged, and tossed in the river.
 			</p>
 			<p>
