--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -96,18 +96,20 @@
 				With this imaginary device we now have a solution to the above equation 
 				<span class="symbol">x</span> = √(-4)
 				and that solution is 2<span class="symbol">i</span>.
-				Let’s inspect that more closely.
+				(And also -2<span class="symbol">i</span>, of course!
+				We can indicate this “plus or minus” possibility as ±2<span class="symbol">i</span>.)
+				Let’s inspect this more closely.
 			</p>
 <pre><code>
 𝒙 = √(-4)
 𝒙 = √( 4 × -1)
 𝒙 = √4 × √(-1)
-𝒙 =  2 × √(-1)
-𝒙 =  2 × 𝒊
-𝒙 =  2𝒊
+𝒙 = ±2 × √(-1)
+𝒙 = ±2 × <span class="symbol">i</span>
+𝒙 = ±2<span class="symbol">i</span>
 </code></pre>
 			<p>
-				Our result of 2<span class="symbol">i</span> is an
+				2<span class="symbol">i</span> is an
 				<a href="https://en.wikipedia.org/wiki/Imaginary_number" target="_blank">imaginary number</a>
 				that consists of a real number multiplier, 2, and 
 				our imaginary solution to √(-1), called <span class="symbol">i</span>.
