Matrix doc function signatures.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -417,6 +417,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					</dd>
 				</li>
 			</ul>
+			<hr>
 			<h3>Static properties</h3>
 			<ul class="properties">
 				<li>
@@ -431,6 +432,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 				<li>
 					<dt id=".index">index</dt>
 					<dd>
+						<code class="value-type">Number</code>
 						The number of instances created so far.
 					</dd>
 				</li>
@@ -763,6 +765,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					</dd>
 				</li>
 			</ul>
+			<hr>
 			<h3 id="Prototype_properties">Prototype properties</h3>
 			<ul class="properties">
 				<li>
